--- a/examples/helloworld.conf
+++ b/examples/helloworld.conf
@@ -10,7 +10,7 @@ script {
       dataSource {
         type = file
         behavior = csv
-        directory = "./test/src/main/resources/"
+        directory = "./examples/data/"
         query {
           read {
             filenameTemplate ="TaxableIncome2014.csv"
